--- a/src/features/BuyTicketFeature/Components/Infomation/style/style.scss
+++ b/src/features/BuyTicketFeature/Components/Infomation/style/style.scss
@@ -5,8 +5,19 @@
 		}
 
 		display: flex;
-		justify-content: flex-start;
+		justify-content: space-between;
 		align-items: center;
 		margin-bottom: 20px;
+
+		&.date {
+			font-size: 18px;
+			font-weight: bold;
+			justify-content: center;
+			color: #1890ff;
+
+			& > span {
+				margin-right: 10px;
+			}
+		}
 	}
 }
