--- a/src/features/HomeFeature/Pages/MainPage/style/mainPage.scss
+++ b/src/features/HomeFeature/Pages/MainPage/style/mainPage.scss
@@ -1,24 +1,37 @@
 @import '../../../../../assets/styles/all.scss';
 .home {
+	background-image: url('../../../../../assets/images/bacground-01.jpg');
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+
 	& > * {
 		padding-top: 3.25rem;
 		padding-bottom: 3.25rem;
-		padding-left: 10%;
-		padding-right: 10%;
+		margin-left: 10%;
+		margin-right: 10%;
 
-		height: calc(100vh + 3.25rem);
+		width: calc(100% - 20%);
 
 		@include tablet {
-			padding-left: 2%;
-			padding-right: 2%;
+			margin-left: 2%;
+			margin-right: 2%;
+			width: calc(100% - 4%);
 		}
 		@include mobile {
-			padding-left: 2%;
-			padding-right: 2%;
+			margin-left: 2%;
+			margin-right: 2%;
+			width: calc(100% - 4%);
 		}
 		@include tabletAndDesktop {
-			padding-left: 2%;
-			padding-right: 2%;
+			margin-left: 2%;
+			margin-right: 2%;
+			width: calc(100% - 4%);
 		}
 	}
+}
+
+.loading {
+	background-color: $primary-color;
 }
