--- a/src/features/HomeFeature/Pages/BuyPage/Page/ListTicketPage/style/listTicketPage.scss
+++ b/src/features/HomeFeature/Pages/BuyPage/Page/ListTicketPage/style/listTicketPage.scss
@@ -1,6 +1,7 @@
 @import '../../../../../../../assets/styles/all.scss';
 
 .listTicketPage {
+	height: 100%;
 	display: flex;
 	align-items: flex-start;
 	justify-content: space-around;
@@ -18,13 +19,12 @@
 		text-align: left;
 		width: 30%;
 		padding: 2rem;
-		margin-bottom: 2rem;
 
 		@include smallDesktop {
-			width: 40%;
+			width: 35%;
 		}
 		@include tabletAndDesktop {
-			width: 45%;
+			width: 35%;
 		}
 		@include tablet {
 			width: 90%;
@@ -33,7 +33,7 @@
 			width: 90%;
 		}
 
-		@include animated-btn($button-color, $second-button-color, $primary-text-color, 10px, y);
+		@include animated-btn($second-button-color, $button-color, $primary-text-color, 10px, y-rotate);
 
 		& > .information {
 			&__date {
@@ -101,16 +101,19 @@
 	&__seatMap {
 		width: 40%;
 
-		background-color: $primary-text-color;
+		background-color: rgba($color: $primary-text-color, $alpha: 0.4);
 		color: $primary-color;
 		border-radius: 10px;
-		padding: 1rem 0;
+		padding: 1.5rem;
+
 		@include smallDesktop {
-			padding: 0.5rem 0;
+			width: 50%;
 		}
+
 		@include tabletAndDesktop {
-			padding: 0.5rem 0;
+			width: 55%;
 		}
+
 		@include tablet {
 			width: 90%;
 		}
@@ -120,7 +123,9 @@
 
 		& > .seatMap {
 			&__title {
+				//color: $primary-text-color;
 				font-size: 2rem;
+				padding-bottom: 1rem;
 
 				@include smallDesktop {
 					font-size: 1.7rem;
@@ -131,63 +136,54 @@
 			}
 			&__row {
 				margin: 0 auto;
-				width: 50%;
+				width: 100%;
 				border: 1px solid black;
 				border-radius: 10px;
-				@include smallDesktop {
-					width: 60%;
-				}
-				@include tabletAndDesktop {
-					width: 60%;
-				}
-
-				@include tablet {
-					width: 90%;
-				}
-				@include mobile {
-					width: 90%;
-				}
+				background-color: $primary-text-color;
+				position: relative;
 
 				& > .row {
 					&__item {
+						width: 100%;
+						padding: 0.5rem;
+
 						& > .item {
 							&__seat {
 								font-size: 1.2rem;
 								padding: 0.5rem;
-								margin: 0.4rem;
+								width: 100%;
 								color: $primary-text-color;
-								@include animated-btn($button-color, $primary-text-color, $button-color, 5px, x);
+								background-color: $button-color;
+								border-radius: 2px;
 
 								@include smallDesktop {
 									font-size: 1rem;
 									padding: 0.5rem;
-									margin: 0.2rem;
 								}
 								@include tabletAndDesktop {
 									font-size: 0.8rem;
 									padding: 0.5rem;
-									margin: 0.2rem;
 								}
 								@include tablet {
 									font-size: 1rem;
 									padding: 0.8rem;
-									margin: 0.3rem;
 								}
 
 								@include mobile {
 									font-size: 1rem;
 									padding: 0.8rem;
-									margin: 0.3rem;
 								}
 
 								&.disable {
 									color: black !important;
 									cursor: not-allowed !important;
-									@include animated-btn(#ccc, #ccc, black, 5px, y);
+									background-color: #ccc;
+									border-radius: 2px;
 								}
 
 								&.ant-tag-checkable-checked {
-									@include animated-btn($third-button-color, $primary-text-color, $third-button-color, 5px, x);
+									background-color: $third-button-color;
+									border-radius: 2px;
 									border: none;
 								}
 							}
@@ -196,5 +192,17 @@
 				}
 			}
 		}
+	}
+}
+
+.loadingScreen {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: $primary-text-color;
+	border-radius: 10px;
+
+	& > .jt {
+		font-size: 3rem;
 	}
 }
