--- a/src/features/AuthFeature/style/authFeature.scss
+++ b/src/features/AuthFeature/style/authFeature.scss
@@ -1,18 +1,22 @@
-@import '../../../../../assets/styles/all.scss';
-.home {
-	background-image: url('../../../../../assets/images/bacground-01.jpg');
+@import '../../../assets/styles/all.scss';
+
+.registerPage,
+.loginPage {
+	background-image: url('../../../assets/images/bacground-01.jpg');
 
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+	padding: 4rem;
 
 	& > * {
-		padding-top: 3.25rem;
-		padding-bottom: 3.25rem;
-		margin-left: 10%;
-		margin-right: 10%;
+		padding: 3.25rem;
+		margin: auto;
 
-		width: calc(100% - 20%);
+		background-color: rgba($color: $primary-color, $alpha: 0.4);
+		border-radius: 10px;
+
+		width: 50%;
 
 		@include tablet {
 			margin-left: 2%;
