--- a/src/features/HomeFeature/components/Banner/styles/banner.scss
+++ b/src/features/HomeFeature/components/Banner/styles/banner.scss
@@ -1,16 +1,12 @@
 @import '../../../../../assets/styles/all.scss';
 
 .banner {
-	// background-image: url('../../../../../assets/images/bacground-01.jpg');
-
-	// background-size: cover;
-	// background-position: center;
-
 	width: 100%;
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
 	transition: all 1s;
+	min-height: 100vh;
 	@include tablet {
 		width: 100%;
 		margin: auto;
