--- a/src/components/Header/styles/responsive.scss
+++ b/src/components/Header/styles/responsive.scss
@@ -13,11 +13,18 @@
 		height: 80vh;
 
 		& > ul {
+			height: 80%;
+			overflow-y: auto;
+			width: 100%;
+
 			&.bottom {
+				background-color: #2a2a2a;
 				position: absolute;
 				bottom: 0;
 				display: table;
 				width: 100%;
+				z-index: 100;
+				height: 20%;
 
 				& > li {
 					border-color: #464646 !important;
@@ -25,12 +32,14 @@
 					border-top: 1px solid;
 					padding: 1rem;
 					text-align: center;
-
+					&.header__user {
+						height: 100%;
+					}
 					&.header__globe {
 						border-right: 1px solid;
 						font-size: $small-font-size;
 						font-weight: $font-medium;
-
+						height: 100%;
 						display: flex;
 						justify-content: center;
 						align-items: center;
