--- a/src/features/HomeFeature/components/SelectDateForm/styles/selectDateForm.scss
+++ b/src/features/HomeFeature/components/SelectDateForm/styles/selectDateForm.scss
@@ -1,9 +1,22 @@
 @import '../../../../../assets/styles/all.scss';
 
 .SelectDateForm {
+	&:after {
+		content: '';
+		background: rgba($primary-text-color, 0.1);
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.05);
+		backdrop-filter: blur(2px);
+		border-radius: 10px;
+		z-index: -999;
+	}
+
 	align-items: center;
 	justify-content: center;
-
 	margin: 2rem 0;
 	position: relative;
 	@include boxShadow;
@@ -32,7 +45,7 @@
 		margin: 2rem auto;
 	}
 
-	background-color: rgba($color: $third-color, $alpha: 0.6);
+	background-color: rgba(white, $alpha: 0.05);
 	border-radius: 10px;
 
 	& > * {
@@ -74,6 +87,7 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
+				z-index: 1;
 
 				@include tablet {
 					margin-bottom: 1rem;
