--- a/src/assets/styles/box-shadow.scss
+++ b/src/assets/styles/box-shadow.scss
@@ -1,3 +1,3 @@
 @mixin boxShadow {
-	box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+	box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
