--- a/src/features/AuthFeature/style/authFeature.scss
+++ b/src/features/AuthFeature/style/authFeature.scss
@@ -1,7 +1,25 @@
 @import '../../../assets/styles/all.scss';
 
 .page {
-	background-image: url('../../../assets/images/desktop.svg');
+	background-size: cover;
+	background-position: center;
+
+	@include largeDesktop {
+		background-image: url('../../../assets/images/desktop.svg');
+	}
+	@include smallDesktop {
+		background-image: url('../../../assets/images/desktop.svg');
+	}
+	@include tabletAndDesktop {
+		background-image: url('../../../assets/images/tablet.svg');
+	}
+	@include tablet {
+		background-image: url('../../../assets/images/tablet.svg');
+	}
+	@include mobile {
+		background-image: url('../../../assets/images/mobile.svg');
+	}
+
 	min-height: 100vh;
 	background-size: cover;
 	background-repeat: no-repeat;
