--- a/src/features/HomeFeature/Pages/MainPage/style/mainPage.scss
+++ b/src/features/HomeFeature/Pages/MainPage/style/mainPage.scss
@@ -1,6 +1,20 @@
 @import '../../../../../assets/styles/all.scss';
 .home {
-	background-image: url('../../../../../assets/images/bacground-01.jpg');
+	@include largeDesktop {
+		background-image: url('../../../../../assets/images/desktop.svg');
+	}
+	@include smallDesktop {
+		background-image: url('../../../../../assets/images/desktop.svg');
+	}
+	@include tabletAndDesktop {
+		background-image: url('../../../../../assets/images/tablet.svg');
+	}
+	@include tablet {
+		background-image: url('../../../../../assets/images/tablet.svg');
+	}
+	@include mobile {
+		background-image: url('../../../../../assets/images/mobile.svg');
+	}
 
 	background-size: cover;
 	background-repeat: no-repeat;
